# weather-dashboard

./: CHANGELOG.md  CURRENT_SPRINT.md  INSTALLATION.md  NEXT_DEVELOPMENT_PHASE.md  README.md  RELEASE_WORKFLOW.md  SPRINT4.md  SPRINT4_SUMMARY.md  SPRINT5.md  SPRINT5_SUMMARY.md  SPRINT6.md  SPRINT6_PROGRESS.md  WEATHER_DASHBOARD_IMPLEMENTATION.md  WEATHER_DASHBOARD_PLAN.md  WEATHER_DASHBOARD_STYLING.md  cleanup-implementation.sh  commitlint.config.js  dependency-audit-plan.md  documentation-update-checklist.md  install_backend.sh  package-lock.json  package.json  pr_description.md  project-cleanup-plan.md  requirements.txt  restart-servers-new.sh  restart-servers.sh  server-control.sh  server-restart.sh  server-scripts-refactoring-plan.md  start-servers.sh
.husky/: commit-msg  pre-commit
backend/: main.py  requirements.txt  weather_service.py
cleanup_backup/: app.py.bak  reliable-restart.sh  response.json  run.sh  simple-start.sh  start-servers.sh
scripts/: check-api-config.sh  check-docs.js  check-versions.sh
weather-dashboard/: CHANGELOG.md  FEATURE_FLAGS.md  NEXT_DEVELOPMENT_PHASE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASE_WORKFLOW.md  RESTART.md  SERVER_MANAGEMENT.md  TEST_PLAN.md  (+16 more)
weather-dashboard/backend/: .env.template  app.py  config.py  main.py  openmeteo_client.py  proxy_server.py  pyproject.toml  requirements.txt  run_tests.py  standalone_server.py  supervisord.conf  weather_service.py
weather-dashboard/backend/tests/: test_api.py  test_weather_service.py
weather-dashboard/backend/utils/: config_validator.py  health_check.py  logger.py
(+124 files in other folders)
