[tool.poetry]
name = "weather-dashboard-backend"
version = "1.3.2"
description = "Backend server for the Weather Dashboard application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.2"
flask-cors = "^4.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
openmeteo-requests = "^1.3.0"
openmeteo-sdk = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
pytest-flask = "^1.3.0"
pytest-mock = "^3.12.0"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"